Cleaned up repository (and added tests)